--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["src", "preview.tsx"]
+    "include": ["src"]
 }
